hphp/test/slow/parser/hh-reserved-name-callable-1.php.expectf
Fatal error: Cannot use `Callable` as a type name as it is reserved in %s/test/slow/parser/hh-reserved-name-callable-1.php on line 6
